noinst_HEADERS  = il_targa.h    il_doompal.h \
                  il_jpeg.h     il_pnm.h \
                  il_endian.h   il_lif.h \
                  il_q2pal.h    il_alloc.h \
                  il_manip.h \
                  il_register.h il_bits.h \
                  il_files.h    il_mdl.h \
                  il_rle.h      il_bmp.h \
                  il_icon.h     il_pal.h \
                  il_sgi.h      il_dcx.h \
                  il_internal.h il_pcx.h \
                  il_states.h   il_dds.h \
                  il_stack.h    il_pic.h \
                  il_psd.h      il_psp.h \
                  il_gif.h
